--- a/RACdotcom/error.html
+++ b/RACdotcom/error.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <title>Oops!</title>
 </head>
-<body style="background-color: black; color: #bfbea8;">
+<body style="background-color: black; color: #bfbea8; text-align: center">
     <div>
         <h1>Something bad happened. Oops!</h1>
-        <p><h2>head back <a href="dummylink.com fixafteracquiringdomain">home</a>.</h2></p>
+        <p><h2>head back <a href="">home</a>.</h2></p>
     </div>
 </body>
 </html>
