--- a/RACdotcom/error.html
+++ b/RACdotcom/error.html
@@ -7,7 +7,7 @@
 <body style="background-color: black; color: #bfbea8; text-align: center">
     <div>
         <h1>Something bad happened. Oops!</h1>
-        <p><h2>head back <a href="~/">home</a>.</h2></p>
+        <p><h2>head back <a href="~/Home/Index">home</a>.</h2></p>
     </div>
 </body>
 </html>
